<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Otter::StartPagePreferencesDialog</class>
 <widget class="QDialog" name="Otter::StartPagePreferencesDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>360</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Start Page Preferences</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QRadioButton" name="defaultBackgroundRadioButton">
     <property name="text">
      <string>Default background</string>
     </property>
     <attribute name="buttonGroup">
      <string notr="true">buttonGroup</string>
     </attribute>
    </widget>
   </item>
   <item>
    <widget class="QRadioButton" name="customBackgroundRadioButton">
     <property name="text">
      <string>Custom style</string>
     </property>
     <attribute name="buttonGroup">
      <string notr="true">buttonGroup</string>
     </attribute>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
      <number>0</number>
     </property>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeType">
        <enum>QSizePolicy::Fixed</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>0</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QWidget" name="backgroundWidget" native="true">
       <layout class="QFormLayout" name="backgroundLayut">
        <property name="leftMargin">
         <number>0</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>0</number>
        </property>
        <property name="bottomMargin">
         <number>0</number>
        </property>
        <item row="0" column="1">
         <widget class="Otter::FilePathWidget" name="backgroundFilePathWidget" native="true"/>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="backgroundModeLabel">
          <property name="text">
           <string>Scaling mode:</string>
          </property>
          <property name="buddy">
           <cstring>backgroundModeComboBox</cstring>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QComboBox" name="backgroundModeComboBox"/>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="backgroundPathLabel">
          <property name="text">
           <string>Image path:</string>
          </property>
          <property name="buddy">
           <cstring>backgroundFilePathWidget</cstring>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="backgroundColorLabel">
          <property name="text">
           <string>Color:</string>
          </property>
          <property name="buddy">
           <cstring>backgroundColorWidget</cstring>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="Otter::ColorWidget" name="backgroundColorWidget"/>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QRadioButton" name="noBackgroundRadioButton">
     <property name="text">
      <string>No background</string>
     </property>
     <attribute name="buttonGroup">
      <string notr="true">buttonGroup</string>
     </attribute>
    </widget>
   </item>
   <item>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="columnsPerRowLabel">
       <property name="text">
        <string>Columns per row:</string>
       </property>
       <property name="buddy">
        <cstring>columnsPerRowSpinBox</cstring>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QSpinBox" name="columnsPerRowSpinBox">
       <property name="specialValueText">
        <string>Automatic</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="zoomLevelLabel">
       <property name="text">
        <string>Zoom level:</string>
       </property>
       <property name="buddy">
        <cstring>zoomLevelSpinBox</cstring>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QSpinBox" name="zoomLevelSpinBox">
       <property name="suffix">
        <string>%</string>
       </property>
       <property name="minimum">
        <number>10</number>
       </property>
       <property name="maximum">
        <number>999</number>
       </property>
       <property name="value">
        <number>100</number>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="showSearchFieldCheckBox">
     <property name="text">
      <string>Show search field</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="showAddTileCheckBox">
     <property name="text">
      <string>Show tile to add new entries</string>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Otter::FilePathWidget</class>
   <extends>QWidget</extends>
   <header>src/ui/FilePathWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>Otter::ColorWidget</class>
   <extends>QPushButton</extends>
   <header>src/ui/ColorWidget.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>customBackgroundRadioButton</tabstop>
  <tabstop>backgroundModeComboBox</tabstop>
  <tabstop>backgroundColorWidget</tabstop>
  <tabstop>columnsPerRowSpinBox</tabstop>
  <tabstop>zoomLevelSpinBox</tabstop>
  <tabstop>showSearchFieldCheckBox</tabstop>
  <tabstop>showAddTileCheckBox</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>Otter::StartPagePreferencesDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>257</x>
     <y>290</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>Otter::StartPagePreferencesDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>325</x>
     <y>290</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <buttongroups>
  <buttongroup name="buttonGroup"/>
 </buttongroups>
</ui>
